Alteracao do index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
         <title>Visualização dos dados</title>
     </head>
     <body>
-        <h1>Enviar arquivo CSV (Rodrigo Sakai)</h1>
+        <h1>Enviar arquivo CSV</h1>
+        <h1>Rodrigo K Sakai</h1>
         <form action="/display" method="post" enctype="multipart/form-data">
             <input type="file" name="file">
             <input type="submit">
